LPS-135864 Avoid overflow when experience name or segment name is long

--- a/modules/apps/translation/translation-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/translation/translation-web/src/main/resources/META-INF/resources/css/main.scss
@@ -174,6 +174,10 @@ $productMenuWidth: 320px;
 					padding: 0;
 				}
 			}
+
+			.translation-experience-name {
+				max-width: 2/3 * 100%;
+			}
 		}
 	}
 }
